fixes icons alignment in nav and header

--- a/src/app/components/nav/header/header.component.sass
+++ b/src/app/components/nav/header/header.component.sass
@@ -46,7 +46,6 @@
 .header-open-menu
   width: 5em
   min-width: 5em
-  padding: 0 0.75em 0.9em 0
   flex: 0 0 1em
   border-radius: 0
 
