--- a/src/app/components/nav/nav.component.sass
+++ b/src/app/components/nav/nav.component.sass
@@ -50,10 +50,9 @@ mat-nav-list>a.active
   border-top: 1px rgba(255, 255, 255, 0.1) solid
   border-bottom: 1px rgba(255, 255, 255, 0.1) solid
 
-mat-nav-list>a>i
+mat-nav-list>a i
   font-size: 2.5rem
-  width: 1.5em
-  height: 1em
+  margin-right: 0.25em
 
 .content
   overflow-y: auto
